chapter5/5-5-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-vm-access
spec:
  podSelector:
    matchLabels:
      app: backend
  ingress:
    - from:
      - ipBlock:
          cidr: 192.168.1.0/24
      ports:
        - protocol: TCP
          port: 80
